--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -17,3 +17,5 @@
     <td><%= link_to 'Destroy', instrument, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 <% end %>
 </table>
+
+<%= link_to 'New Instrument', new_instrument_path %>
