--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -1,5 +1,13 @@
 <p><%= @current_user.name%>'s Dashboard</p>
 
-<% @videos.each do |video| %> 
-  <%= video %> 
-<% end %> 
+
+<ul>
+<% @user_videos.each do |video| %>
+  <li>
+    <%= link_to video.title, "../user_videos/"+video.id.to_s %>
+  </li>
+<% end %>
+
+<%= @weekly_tune.title %>
+
+</ul>
