--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <div class="navbar">
   <div class="navbar-inner">
     <ul class="nav">
-      <li><%= link_to 'TuneUp', :controller => '/user', :action => 'dashboard'%></li>
+      <li><%= link_to 'TuneUp', :controller => '/weekly_tunes', :action => 'index'%></li>
     </ul>
 
     <ul class="nav pull-right">
