--- a/app/views/user_videos/show.html.erb
+++ b/app/views/user_videos/show.html.erb
@@ -14,6 +14,9 @@
 <iframe width="425" height="349" src="<%= @u %>" frameborder="0" allowfullscreen>
 </iframe>
 
+<br />
+<%= link_to "Rate this", new_stat_path(:user_id => @user_video.user_id, :user_video_id => @user_video.id)  %> 
+
 
 <br />
 <%= link_to 'Edit', edit_user_video_path(@user_video) %> |
