--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
-<h2><%= @current_user.name %></h2>
-<h1>PROGRESS</h1>
+<h2><%= @current_user.name %>'s Progress</h2>
+<%= image_tag 'twolines.png' %>
