--- a/app/views/user_videos/_form.html.erb
+++ b/app/views/user_videos/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="field">
-    <%= f.hidden_field :user_id, :value => current_user %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
   </div>
 
   <div class="field">
